# fastapi-mongodb

./: README.md  main.py  pyproject.toml
app/config/: database.py
app/routes/: todos.py
app/schema/: todos.py
config/: database.py
routes/: route.py
schema/: schemas.py
